[metadata]
name = Drugs'n'Kebab
author = Pierre Savatte
author-email = pierre-savatte@laposte.net
description =
description-file = README.md
classifiers =
    Programming Language :: Python :: 3.7.9

[options]
install_requires =
    python_version == 3.7.9

[files]
packages =
    dnk


[entry_points]
console_scripts =
    dnk = dnk.__main__:main

[flake8]
max-line-length = 80
ignore = E501,W503,E402,W291,F401
